# reflector-challenge

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  run.sh
contract/: Cargo.toml  Makefile
contract/src/: interface.rs  lib.rs  model.rs  oracle.rs  storage.rs  vault.rs
contracts/: Makefile  defindex_factory.wasm  defindex_vault.wasm  hodl_strategy.wasm  vault.wasm
contracts/manager/: Cargo.toml  Makefile
contracts/manager/src/: error.rs  lib.rs  model.rs  oracle.rs  test.rs  utils.rs  vault.rs
contracts/manager/src/test/: oracle.rs  setup.rs  soroswap_setup.rs  swap.rs  trustless_manager.rs  utils.rs
public/: challenge_contracts.json  mainnet.contracts.json  mainnet.soroswap.json  testnet.contracts.json  testnet.soroswap.json
src/: deployXRPToken.ts  deploy_factory.ts  deploy_hodl.ts  deploy_tmanager.ts  deploy_vault.ts  deploy_vaults.ts  main.ts  mintAndCreateLP.ts  toolkit.ts
src/test/: test_tmanager.ts
wasm/: factory.wasm
