[package]
name = "trusless-manager"
version = "0.1.0"
authors = ["paltalabs <paltalabs.io>"]
license = "GPL-3.0"
edition = "2021"
publish = false
repository = "https://github.com/paltalabs/reflector-challenge"

[lib]
crate-type = ["cdylib"]
 
[dependencies] 
soroban-sdk = "22.0.0-rc.2.1"

[dev-dependencies]
soroban-sdk = { version = "22.0.0-rc.2.1", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
